--- a/simple-gravity-example1.html
+++ b/simple-gravity-example1.html
@@ -5,14 +5,39 @@
 <title>CH5EX14: Simple Gravity</title>
 <script type="text/javascript">
 window.addEventListener('load', eventWindowLoaded, false);
+
+var speed = 4;
+
+var gravity = .1;
+var angle = 305;
+var radians = angle * Math.PI/ 180;
+var radius = 15;
+var vx = Math.cos(radians) * speed;
+var vy = Math.sin(radians) * speed;
+
+var theCanvas;
+var context;
+
+var p1;
+var ball;
+
 function eventWindowLoaded() {
    canvasApp();
 }
 
 function canvasApp() {
 
+   theCanvas = document.getElementById("canvasOne");
+   context = theCanvas.getContext("2d");
 
-  function  drawScreen () {
+   p1 = {x:20,y:theCanvas.width-radius};
+   ball = {x:p1.x, y:p1.y, velocityx: vx, velocityy:vy, radius:radius};
+
+   setInterval(drawScreen, 33);
+
+}
+
+function  drawScreen () {
 
       context.fillStyle = '#EEEEEE';
       context.fillRect(0, 0, theCanvas.width, theCanvas.height);
@@ -39,24 +64,6 @@ function canvasApp() {
       context.fill();
 
    }
-   var speed = 4;
-
-   var gravity = .1;
-   var angle = 305;
-   var radians = angle * Math.PI/ 180;
-   var radius = 15;
-   var vx = Math.cos(radians) * speed;
-   var vy = Math.sin(radians) * speed;
-
-   theCanvas = document.getElementById("canvasOne");
-   context = theCanvas.getContext("2d");
-
-   var p1 = {x:20,y:theCanvas.width-radius};
-   var ball = {x:p1.x, y:p1.y, velocityx: vx, velocityy:vy, radius:radius};
-
-   setInterval(drawScreen, 33);
-
-}
 
 </script>
 
